# gdal-binary

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.py  meson.build  pyproject.toml  version.py.in
.github/workflows/: build.yml
gdal_binary/: CMakeLists.txt  __init__.py
src/: meson.build
src/gdal_binary/: __init__.py
tests/: test_basic.py
